# PPT_Generator

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: __init__.py  deps.py  pipeline.py  projects.py
backend/app/export/: __init__.py  pptx_export.py
backend/app/generation/: __init__.py  outline.py  quality.py  slides.py
backend/app/ingest/: __init__.py  _table_md.py  dispatcher.py  docx_converter.py  excel_converter.py  md_converter.py  pdf_converter.py
backend/app/llm/: __init__.py  base.py  openai_compat.py
backend/app/store/: project.py
backend/app/styles/: __init__.py  catalog.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_e2e_smoke.py  test_export.py  test_ingest_basic.py  test_ingest_docs.py  test_llm.py  test_outline.py  test_project_store.py  test_quality.py  test_slides_gen.py  test_styles.py
docs/: phase2-backlog.md
docs/superpowers/plans/: 2026-07-04-ppt-generator-mvp.md
docs/superpowers/specs/: 2026-07-04-ppt-generator-design.md
frontend/: index.html
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/steps/: ExportStep.jsx  OutlineStep.jsx  PreviewStep.jsx  StyleStep.jsx  UploadStep.jsx
styles/palettes/: cool-corporate.md  editorial-classic.md  mono-ink.md
styles/visual/: dark-tech.md  editorial.md  soft-rounded.md  swiss-minimal.md
