[project]
name = "ppt-generator"
version = "0.1.0"
description = "PPT Generator MVP backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pillow>=12.3.0",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "uvicorn[standard]>=0.50.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
